# cp

./: .gitignore
tc/: CMakeLists.txt  srm_773_2_250.cc  srm_773_2_500.cc  srm_811_1_250.cc
uva/: 00100.cc  00108.cc  00112.cc  00156.cc  00195.cc  00216.cc  00272.cc  00314.cc  00357.cc  00401.cc  00441.cc  00458.cc  00481.cc  00489.cc  00524.cc  00573.cc  00574.cc  00624.cc  00674.cc  00727.cc  00750.cc  00793.cc  00836.cc  00927.cc  00983.cc  01061.cc  01196.cc  01203.cc  01260.cc  10004.cc  10038.cc  10048.cc  10055.cc  10102.cc  10107.cc  10114.cc  10141.cc  10189.cc  10226.cc  10258.cc  (+69 more)
