cmake_minimum_required (VERSION 3.1.0 FATAL_ERROR)
project (uva CXX)
add_executable(272 272.cc)
target_compile_features(272 PRIVATE cxx_range_for)
add_executable(1124 1124.cc)
add_executable(10550 10550.cc)
target_compile_features(10550 PRIVATE cxx_range_for)
add_executable(11044 11044.cc)
add_executable(11172 11172.cc)
add_executable(11364 11364.cc)
target_compile_features(11364 PRIVATE cxx_range_for)
add_executable(11498 11498.cc)
add_executable(11727 11727.cc)
add_executable(12250 12250.cc)
target_compile_features(12250 PRIVATE cxx_range_for)
add_executable(357 357.cc)
add_executable(10114 10114.cc)
add_executable(11559 11559.cc)
add_executable(11799 11799.cc)
add_executable(573 573.cc)
add_executable(10141 10141.cc)
add_executable(11507 11507.cc)
add_executable(579 579.cc)
add_executable(893 893.cc)
target_compile_features(893 PRIVATE cxx_range_for)
add_executable(161 161.cc)
target_compile_features(161 PRIVATE cxx_range_for)
add_executable(489 489.cc)
target_compile_features(489 PRIVATE cxx_range_for)
add_executable(1061 1061.cc)
target_compile_features(1061 PRIVATE cxx_range_for)
add_executable(787 787.cc)
add_executable(10684 10684.cc)
add_executable(108 108.cc)
add_executable(10755 10755.cc)
add_executable(836 836.cc)
add_executable(10827 10827.cc)
add_executable(11951 11951.cc)
add_executable(10038 10038.cc)
add_executable(11340 11340.cc)
target_compile_features(11340 PRIVATE cxx_range_for)
add_executable(12356 12356.cc)
target_compile_features(12356 PRIVATE cxx_range_for)
add_executable(10189 10189.cc)
add_executable(10773 10773.cc)
add_executable(146 146.cc)
add_executable(353 353.cc)
add_executable(10107 10107.cc)
add_executable(514 514.cc)
add_executable(1203 1203.cc)
target_compile_features(1203 PRIVATE cxx_range_for)
add_executable(11459 11459.cc)
add_executable(481 481.cc)
target_compile_features(481 PRIVATE cxx_range_for)
