cmake_minimum_required (VERSION 3.3.1 FATAL_ERROR)
set(CMAKE_CXX_STANDARD 11)
project (uva CXX)
add_executable(00272 00272.cc)
add_executable(01124 01124.cc)
add_executable(10550 10550.cc)
add_executable(11044 11044.cc)
add_executable(11172 11172.cc)
add_executable(11364 11364.cc)
add_executable(11498 11498.cc)
add_executable(11727 11727.cc)
add_executable(12250 12250.cc)
add_executable(00357 00357.cc)
add_executable(10114 10114.cc)
add_executable(11559 11559.cc)
add_executable(11799 11799.cc)
add_executable(00573 00573.cc)
add_executable(10141 10141.cc)
add_executable(11507 11507.cc)
add_executable(00579 00579.cc)
add_executable(00893 00893.cc)
add_executable(00161 00161.cc)
add_executable(00489 00489.cc)
add_executable(01061 01061.cc)
add_executable(00787 00787.cc)
add_executable(10684 10684.cc)
add_executable(00108 00108.cc)
add_executable(10755 10755.cc)
add_executable(00836 00836.cc)
add_executable(10827 10827.cc)
add_executable(11951 11951.cc)
add_executable(10038 10038.cc)
add_executable(11340 11340.cc)
add_executable(12356 12356.cc)
add_executable(10189 10189.cc)
add_executable(10773 10773.cc)
add_executable(00146 00146.cc)
add_executable(00353 00353.cc)
add_executable(10107 10107.cc)
add_executable(00514 00514.cc)
add_executable(01203 01203.cc)
add_executable(11459 11459.cc)
add_executable(00481 00481.cc)
add_executable(11456 11456.cc)
add_executable(10443 10443.cc)
add_executable(10954 10954.cc)
add_executable(00727 00727.cc)
add_executable(10226 10226.cc)
add_executable(11933 11933.cc)
add_executable(10855 10855.cc)
add_executable(10920 10920.cc)
add_executable(11581 11581.cc)
add_executable(10258 10258.cc)
add_executable(11790 11790.cc)
add_executable(11057 11057.cc)
add_executable(12247 12247.cc)
add_executable(10567 10567.cc)
add_executable(12192 12192.cc)
add_executable(10341 10341.cc)
add_executable(sqroot sqroot.cc)
add_executable(11413 11413.cc)
add_executable(12032 12032.cc)
add_executable(10616 10616.cc)
add_executable(10819 10819.cc)
add_executable(10487 10487.cc)
add_executable(00441 00441.cc)
add_executable(00624 00624.cc)
add_executable(00524 00524.cc)
add_executable(00574 00574.cc)
add_executable(10976 10976.cc)
add_executable(01260 01260.cc)
add_executable(11242 11242.cc)
add_executable(10102 10102.cc)
add_executable(11565 11565.cc)
add_executable(00750 00750.cc)
add_executable(11085 11085.cc)
add_executable(10812 10812.cc)
add_executable(00401 00401.cc)
add_executable(00793 00793.cc)
add_executable(10306 10306.cc)
add_executable(11517 11517.cc)
add_executable(10945 10945.cc)
add_executable(00156 00156.cc)
add_executable(00195 00195.cc)
add_executable(11292 11292.cc)
add_executable(11389 11389.cc)
add_executable(10656 10656.cc)
add_executable(00216 00216.cc)
add_executable(10337 10337.cc)
add_executable(10496 10496.cc)
add_executable(11875 11875.cc)
add_executable(10004 10004.cc)
add_executable(10305 10305.cc)
add_executable(10405 10405.cc)
add_executable(10048 10048.cc)
add_executable(10986 10986.cc)
add_executable(00674 00674.cc)
add_executable(00983 00983.cc)
add_executable(01196 01196.cc)
add_executable(11566 11566.cc)
add_executable(00927 00927.cc)
add_executable(11094 11094.cc)
add_executable(00314 00314.cc)
add_executable(00112 00112.cc)
